chore: initalize backend
Changes Included:
- add nestJS dependency to NX monorepo
- create nestJS app as 'ccm-be' within monorepo

--- a/nx.json
+++ b/nx.json
@@ -46,6 +46,14 @@
         "targetName": "e2e",
         "componentTestingTargetName": "component-test"
       }
+    },
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview"
+      }
     }
   ],
   "generators": {
