feat: add mock navbar and footer components
- generate new lib for navbar and footer components
- add basic component structure (through libs) as recommended by Nx

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@oss-ccm/frontend/shared/ui/footer": [
+        "libs/frontend/shared/ui/footer/src/index.ts"
+      ],
+      "@oss-ccm/frontend/shared/ui/navbar": [
+        "libs/frontend/shared/ui/navbar/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
